--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ LazyData: true
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.1.2
+URL: https://github.com/NaturallyAsh/IOdatasets
+BugReports: https://github.com/NaturallyAsh/IOdatasets/issues
